--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 FRONTEND_URL="http://localhost:5173"
-MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/?retryWrites=true&w=majority&appName=NearKart
+# MONGODB_URI=MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/NearKart?retryWrites=true&w=majority&appName=NearKart
+MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/test
 RESEND_API_KEY=re_iGofuj6B_B6tRtMC6Kgv5q5aVqtSe8soa
 SECRET_KEY_ACCESS_TOKEN=msmlkggdflknlkgndflkdkgnr
 SECRET_KEY_Refresh_TOKEN=shnkdhhdfkhndrmhaoprhflkg
