updates for production2

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-FRONTEND_URL="http://localhost:5173"
+FRONTEND_URL=https://nearkart.app
 # MONGODB_URI=MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/NearKart?retryWrites=true&w=majority&appName=NearKart
 MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/test
 RESEND_API=re_iGofuj6B_B6tRtMC6Kgv5q5aVqtSe8soa
