--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
-FRONTEND_URL=https://nearkart.app
-# MONGODB_URI=MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/NearKart?retryWrites=true&w=majority&appName=NearKart
+FRONTEND_URL=http://localhost:5173
 MONGODB_URI=mongodb+srv://aviralchaurasia175_db_user:wPQ9IrFF3ObYMLqD@nearkart.pgc5c3y.mongodb.net/test
 RESEND_API=re_iGofuj6B_B6tRtMC6Kgv5q5aVqtSe8soa
 SECRET_KEY_ACCESS_TOKEN=msmlkggdflknlkgndflkdkgnr
@@ -7,5 +6,5 @@ SECRET_KEY_Refresh_TOKEN=shnkdhhdfkhndrmhaoprhflkg
 CLODINARY_CLOUD_NAME=dqdsldvto
 CLODINARY_API_KEY=314258899979196
 CLODINARY_API_SECRET_KEY=A-YyWct5wHFPi4mys2Uuw9ROlxw
-RAZORPAY_API_KEY=rzp_test_RwhO9fIZN01Muu
-RAZORPAY_API_SECRET=32b8X1Mx4VLUfyjKS2LL3gaP
+RAZORPAY_API_KEY=rzp_live_RyBCe6RhW5L2JS
+RAZORPAY_API_SECRET=NyezsszQTkhNgXcGenPeiJm1
